🛠️  Fixed detected broken UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -582,7 +582,7 @@ th {
   margin-bottom: 2rem;
 }
 
-.title-container a {
+.title-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -1370,6 +1370,8 @@ pre code {
   flex-direction: column;
   gap: 0.75rem;
   padding: 1rem 0rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .resource-card {
@@ -1379,6 +1381,8 @@ pre code {
   border-radius: 12px;
   text-decoration: none;
   gap: 1rem;
+  max-width: 450px;
+  width: 100%;
 }
 
 .resource-icon-wrapper {
